--- a/package.json
+++ b/package.json
@@ -6,11 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "clean": "rm -rf .next && rm -rf node_modules/.cache",
-    "build:clean": "npm run clean && npm run build",
-    "type-check": "tsc --noEmit",
-    "update-browserslist": "npx update-browserslist-db@latest"
+    "lint": "next lint"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
